# Octopus

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  pyproject.toml  structure.md
.github/workflows/: ci.yml
crates/octopus-core/: Cargo.toml
crates/octopus-core/examples/: thinking_tentacle.rs
crates/octopus-core/src/: app_bridge.rs  brain_goal_surface.rs  brain_loop.rs  bundled_harness.rs  core_boundary.rs  desktop_pet.rs  diagnostics.rs  doctor_surface.rs  download.rs  evolution.rs  evolution_apply.rs  evolution_artifact.rs  evolution_candidate.rs  evolution_contract.rs  evolution_cycle.rs  evolution_drive_surface.rs  evolution_driver.rs  evolution_feed.rs  evolution_llm_plan.rs  evolution_patch.rs  evolution_plan.rs  evolution_prompt.rs  evolution_recommend.rs  evolution_surface.rs  evolution_target.rs  feedback_surface.rs  field_curriculum.rs  field_pack.rs  field_surface.rs  heartbeat_surface.rs  lib.rs  llm_layers.rs  llm_provider.rs  main.rs  manifest_catalog.rs  manifest_runtime.rs  need_queue.rs  need_runner.rs  need_surface.rs  observation_contract.rs  (+18 more)
desktop/pet/: OctopusDesktopPet.swift
docs/: about.html  app.html  architecture.md  core-audit.md  core-files.html  demo.html  docs.html  download.json  field-adaptation.md  index.html  install.sh  pet.html  product-gap.md  quickstart.html  quickstart.md  real-machine-test.md  recipes.html  references.html  references.md  self-iteration.html  self-iteration.md  structure.html  todo.html  tutorial.html  use.html  version-plan.md
docs/zh/: README.md  architecture.md  index.html  quickstart.md  recipes.html  tutorial.html
examples/: smart_tentacle.py
field-packs/: README.md  field-pack.schema.json  index.json
field-packs/_template/: field-pack.json
field-packs/code/: field-pack.json
field-packs/computer-use/: field-pack.json
field-packs/ib/: field-pack.json
field-packs/math/: field-pack.json
field-packs/research/: field-pack.json
field-packs/robotics/: field-pack.json
field-packs/search/: field-pack.json
field-packs/swe/: field-pack.json
field-packs/translate/: field-pack.json
field-packs/write/: field-pack.json
src/octopus/: __init__.py  brain.py  cli.py  color.py  harness.py  heart.py  llm.py  memory.py  models.py  planner.py  router.py  tentacle.py  tools.py
tentacles/: README.md  tentacle.schema.json
tentacles/bash-only/: manifest.json
tentacles/computer-use-agent/: manifest.json
tentacles/field-mini-task/: go.mod  manifest.json
tests/: test_octopus.py
(+106 files in other folders)
