[project]
name = "octopus-agent"
version = "0.1.0"
description = "Need -> Feed -> Feedback agent core with a clean brain and evolvable harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Octopus contributors" }]
keywords = ["agent", "llm", "harness", "memory", "tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/dangoZhang/Octopus"
Repository = "https://github.com/dangoZhang/Octopus"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octopus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
