[project]
name = "octopus-agent"
version = "0.0.15"
description = "Independent-thinking tools with a clean agent brain and evolvable harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Octopus contributors" }]
keywords = ["agent", "llm", "harness", "memory", "tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/dangoZhang/Octopus"
Documentation = "https://dangozhang.github.io/Octopus/"
Repository = "https://github.com/dangoZhang/Octopus"

[project.scripts]
octopus-py = "octopus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octopus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
