[package]
name = "octopus-core"
version = "0.0.21"
description = "Rust kernel for independent-thinking tools and clean agent brains."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "octopus"
path = "src/main.rs"
